# ActsTrackingPipeline

./: .gitignore  CMakeLists.txt
Run/: AlignmentRun.cpp  FastSimRun.cpp  FullSimTrackingRun.cpp  FullTrackingRun.cpp  SimAlignmentRun.cpp
Run/Confs/: AlignmentRun.conf  FastSimRun.conf  FullSimTrackingRun.conf  FullTrackingRun.conf  Pipeline.conf  SimAlignmentRun.conf  TrackCleaning.conf
include/TrackingPipeline/Alignment/: AlignableDetectorElementBuilder.hpp  AlignmentAlgorithm.hpp
include/TrackingPipeline/Alignment/detail/: AlignmentStoreBuilders.hpp  AlignmentStoreUpdaterBuilders.hpp
include/TrackingPipeline/Analysis/: TrackCleaningAlgorithm.hpp
include/TrackingPipeline/EventData/: DataContainers.hpp  ExtendedSourceLink.hpp  MixedSourceLinkCalibrator.hpp  MixedSourceLinkSurfaceAccessor.hpp
include/TrackingPipeline/Geometry/: LayerBuilderConstruction.hpp
include/TrackingPipeline/Io/: RootSimClusterWriter.hpp  RootSimTrackWriter.hpp  RootTrackReader.hpp  RootTrackWriter.hpp
include/TrackingPipeline/Io/detail/: LinkDef.h  ROOTDictDefs.h
include/TrackingPipeline/Run/: AlignmentRun.hpp  FastSimRun.hpp  FullSimTrackingRun.hpp  FullTrackingRun.hpp  SimAlignmentRun.hpp
include/TrackingPipeline/Simulation/: GaussianVertexGenerator.hpp  IDigitizer.hpp  IMeasurementGenerator.hpp  IMomentumGenerator.hpp  IVertexGenerator.hpp  IdealDigitizer.hpp  KDEMomentumxGenerator.hpp  MeasurementsCreator.hpp  RangedUniformMomentumGenerator.hpp  SimpleDigitizer.hpp  SphericalMomentumGenerator.hpp  StationaryVertexGenerator.hpp  UniformVertexGenerator.hpp
include/TrackingPipeline/Simulation/detail/: NormalRandomVariable.hpp
include/TrackingPipeline/TrackFitting/: FittingServices.hpp
src/Alignment/: AlignmentAlgorithm.cpp  CMakeLists.txt
src/Alignment/detail/: AlignmentStoreBuilders.cpp  AlignmentStoreUpdaterBuilders.cpp
src/Analysis/: CMakeLists.txt  TrackCleaningAlgorithm.cpp
src/Geometry/: CMakeLists.txt  E320GeometryConstraints.cpp
src/Io/: RootSimClusterReader.cpp  RootSimTrackReader.cpp  RootTrackReader.cpp  RootTrackWriter.cpp
src/MagneticField/: CMakeLists.txt
src/Preprocessing/: CMakeLists.txt  Preprocessing.cpp
src/Run/: PipelineRun.cpp
src/Simulation/: CMakeLists.txt  GaussianVertexGenerator.cpp  IdealDigitizer.cpp  MeasurementsCreator.cpp  RangedUniformMomentumgenerator.cpp  SimpleDigitizer.cpp  SphericalMomentumGenerator.cpp  StationaryMomentumGenerator.cpp  StationaryVertexGenerator.cpp  UniformVertexGenerator.cpp
src/TrackFinding/: PathSeedingAlgorithm.cpp
src/TrackFitting/: KFTrackFittingAlgorithm.cpp
